# backend/swagger.json
@@ -22,22 +22,6 @@
       }
     },
     "schemas": {
-      "CreateUserAjvResponse": {
-        "additionalProperties": false,
-        "properties": {
-          "message": {
-            "type": "string"
-          },
-          "status": {
-            "type": "number"
-          }
-        },
-        "required": [
-          "status",
-          "message"
-        ],
-        "type": "object"
-      },
       "HealthCheckResponse": {
         "additionalProperties": false,
         "properties": {
@@ -50,89 +34,35 @@
         ],
         "type": "object"
       },
-      "TestResponse": {
+      "CreateUserResponse": {
         "additionalProperties": false,
         "properties": {
-          "message": {
+          "createdAt": {
+            "format": "date-time",
             "type": "string"
           },
-          "status": {
+          "id": {
             "type": "number"
+          },
+          "name": {
+            "type": "string"
           }
         },
         "required": [
-          "status",
-          "message"
+          "id",
+          "name",
+          "createdAt"
         ],
         "type": "object"
       }
     }
   },
   "paths": {
-    "/ajv": {
+    "/users": {
       "post": {
-        "operationId": "createUserAjv",
+        "operationId": "createUser",
         "tags": [
           "User"
-        ],
-        "requestBody": {
-          "content": {
-            "application/json": {
-              "schema": {
-                "additionalProperties": false,
-                "properties": {
-                  "document": {
-                    "pattern": "^[0-9]{11}$",
-                    "type": "string"
-                  },
-                  "email": {
-                    "format": "email",
-                    "maxLength": 320,
-                    "type": "string"
-                  },
-                  "name": {
-                    "maxLength": 100,
-                    "minLength": 3,
-                    "type": "string"
-                  },
-                  "password": {
-                    "format": "password",
-                    "maxLength": 20,
-                    "minLength": 8,
-                    "type": "string"
-                  }
-                },
-                "required": [
-                  "name",
-                  "email",
-                  "document",
-                  "password"
-                ],
-                "type": "object"
-              }
-            }
-          },
-          "required": true
-        },
-        "responses": {
-          "2XX": {
-            "description": "Default Response",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/CreateUserAjvResponse"
-                }
-              }
-            }
-          }
-        }
-      }
-    },
-    "/test": {
-      "post": {
-        "operationId": "test",
-        "tags": [
-          "Test"
         ],
         "requestBody": {
           "content": {
@@ -161,7 +91,7 @@
             "content": {
               "application/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/TestResponse"
+                  "$ref": "#/components/schemas/CreateUserResponse"
                 }
               }
             }
